[workspace]
members = ["node", "runtime/kreivo", "common"]
resolver = "2"

[profile.release]
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

[profile.test]
debug = 0

[workspace.package]
authors = ['Virto Team <contact@virto.team>']
edition = "2021"
homepage = 'https://github.com/virto-network/virto-node'
license = "GPL-3.0-only"
repository = 'https://github.com/virto-network/virto-node'

[workspace.dependencies]
# common
async-trait = "0.1"
clap = {version = "4.5.3"}
futures = {version = "0.3.28"}
hex-literal = {version = "0.4.1"}
jsonrpsee = {version = "0.22"}
log = {version = "0.4.20"}
parity-scale-codec = {version = "3.6.4", default-features = false, features = [
  "derive",
]}
scale-info = {version = "2.10.0", default-features = false, features = [
  "derive",
]}
serde = {version = "1.0.188", default-features = false, features = [
  "derive",
]}
serde_json = "1.0.121"
smallvec = "1.11"

# Local dependencies
kreivo-runtime = {path = "runtime/kreivo"}

# Virto Pallets
pallet-asset-registry = {default-features = false, path = "pallets/asset-registry"}
pallet-burner = {default-features = false, path = "pallets/burner"}
pallet-communities = {default-features = false, path = "pallets/communities"}
pallet-communities-manager = {default-features = false, path = "pallets/communities-manager"}
pallet-payments = {default-features = false, path = "pallets/payments"}

kusama-runtime-constants = {default-features = false, path = "runtime/kusama-runtime-constants"}
runtime-common = {default-features = false, path = "runtime/common"}
virto-common = {default-features = false, path = "common"}

# Frame Contrib
fc-traits-memberships = {git = "https://github.com/virto-network/frame-contrib", branch = "main", default-features = false}
fc-traits-tracks = {git = "https://github.com/virto-network/frame-contrib", branch = "main", default-features = false}
pallet-referenda-tracks = {git = "https://github.com/virto-network/frame-contrib", branch = "main", package = "fc-pallet-referenda-tracks", default-features = false}

# Substrate std
frame-benchmarking-cli = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-transaction-payment-rpc = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sc-basic-authorship = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sc-chain-spec = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sc-cli = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sc-client-api = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sc-consensus = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sc-executor = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sc-network = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sc-network-sync = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sc-offchain = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sc-rpc = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sc-service = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sc-sysinfo = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sc-telemetry = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sc-tracing = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sc-transaction-pool = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-blockchain = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-consensus = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-keyring = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
substrate-frame-rpc-system = {package = "substrate-frame-rpc-system", git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
substrate-prometheus-endpoint = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
substrate-state-trie-migration-rpc = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}

# Substrate non-std
frame-benchmarking = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sc-transaction-pool-api = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-api = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-block-builder = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-consensus-aura = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-core = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-io = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-keystore = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-offchain = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-session = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-timestamp = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-transaction-pool = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}

# Substrate Runtime
sp-arithmetic = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-genesis-builder = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-inherents = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-runtime = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-std = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-version = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
sp-weights = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}

# Build Dependencies
substrate-build-script-utils = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
substrate-wasm-builder = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}

## Substrate FRAME Dependencies
frame-executive = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
frame-support = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
frame-system = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
frame-system-benchmarking = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
frame-system-rpc-runtime-api = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
frame-try-runtime = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}

## Substrate Pallet Dependencies
pallet-asset-tx-payment = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-assets = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-assets-freezer = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-aura = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-authorship = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-balances = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-collective = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-contracts = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-contracts-primitives = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-democracy = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-identity = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-insecure-randomness-collective-flip = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-multisig = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-nfts = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-preimage = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-proxy = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-ranked-collective = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-referenda = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-remark = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-scheduler = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-session = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-sudo = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-timestamp = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-transaction-payment = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-transaction-payment-rpc-runtime-api = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-treasury = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-uniques = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-utility = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-vesting = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}

# Cumulus client dependencies
cumulus-client-cli = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-client-collator = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-client-consensus-aura = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-client-consensus-common = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-client-consensus-proposer = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-client-consensus-relay-chain = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-client-network = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-client-parachain-inherent = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-client-service = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-primitives-aura = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false}
cumulus-primitives-parachain-inherent = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-relay-chain-interface = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}

# Cumulus runtime dependencies
assets-common = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-pallet-aura-ext = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-pallet-parachain-system = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-pallet-session-benchmarking = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-pallet-xcm = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-pallet-xcmp-queue = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-ping = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-primitives-core = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-primitives-timestamp = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
cumulus-primitives-utility = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-collator-selection = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-message-queue = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
parachain-info = {package = "staging-parachain-info", default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
parachains-common = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}

# Polkadot
polkadot-cli = {features = [
  "rococo-native",
], git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
polkadot-primitives = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false}
polkadot-runtime-parachains = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
polkadot-service = {git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}

# Polkadot Dependencies
pallet-xcm = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
pallet-xcm-benchmarks = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
polkadot-core-primitives = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
polkadot-parachain-primitives = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
polkadot-runtime-common = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
xcm = {package = "staging-xcm", default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
xcm-builder = {package = "staging-xcm-builder", default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
xcm-executor = {package = "staging-xcm-executor", default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}
xcm-simulator = {default-features = false, git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409"}

# Dev dependencies
assert_cmd = "2.0"
nix = {version = "0.27.1", features = ["signal"]}
tempfile = "3.7"
tokio = {version = "1.32.0", features = ["macros", "time", "parking_lot"]}
wait-timeout = "0.2"
